# django-playground

./: pyproject.toml
app/: vercel.json
app/app/: settings.py  urls.py  wsgi.py
app/polls/: admin.py  models.py  urls.py  views.py
app/polls/migrations/: 0001_initial.py
app/polls/templates/polls/: index.html
